--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="mb-5">
             <textarea style="width: 100%" id="logs" rows="30"></textarea>
 
-            <script data-live-highlight="simple">
+            <script data-live-highlight="">
                 const logs = document.getElementById('logs');
 
                 // the second argument is debounce time in second for handling window resize event (optional, default value - 100)
