--- a/index.html
+++ b/index.html
@@ -51,33 +51,35 @@
             <textarea style="width: 100%" id="logs" rows="30"></textarea>
 
             <script data-live-highlight="">
-                const logs = document.getElementById('logs');
+                setTimeout(() => {
+                    const logs = document.getElementById('logs');
 
-                // the second argument is debounce time in second for handling window resize event (optional, default value - 100)
-                deviceObserver.init({
-                    'desktop': 1024,
-                    'tablet': 768,
-                    'mobile': 0,
-                }, 50);
+                    // the second argument is debounce time in second for handling window resize event (optional, default value - 100)
+                    deviceObserver.init({
+                        'desktop': 1024,
+                        'tablet': 768,
+                        'mobile': 0,
+                    }, 50);
 
-                deviceObserver.subscribeOnResize(() => {
-                    // this was triggered not more than one a 50ms
-                    console.log('Do some logic on every resize');
-                });
+                    deviceObserver.subscribeOnResize(() => {
+                        // this was triggered not more than one a 50ms
+                        console.log('Do some logic on every resize');
+                    });
 
-                // pass true as a second argument to immediately invoke the callback with the current device
-                deviceObserver.subscribeOnChange((newDevice) => {
-                    logs.value += `${newDevice}\n`;
-                    logs.value += `Window outerWidth: ${window.outerWidth}\n`;
-                    logs.value += `Window innerWidth: ${window.innerWidth}\n`;
-                    logs.scrollTop = logs.scrollHeight;
+                    // pass true as a second argument to immediately invoke the callback with the current device
+                    deviceObserver.subscribeOnChange((newDevice) => {
+                        logs.value += `${newDevice}\n`;
+                        logs.value += `Window outerWidth: ${window.outerWidth}\n`;
+                        logs.value += `Window innerWidth: ${window.innerWidth}\n`;
+                        logs.scrollTop = logs.scrollHeight;
 
-                    if (deviceObserver.is('>=', 'desktop')) {
-                        console.log('Do some logic for big devices');
-                    } else {
-                        console.log('Do some logic for smaller devices');
-                    }
-                }, true);
+                        if (deviceObserver.is('>=', 'desktop')) {
+                            console.log('Do some logic for big devices');
+                        } else {
+                            console.log('Do some logic for smaller devices');
+                        }
+                    }, true);
+                }, 1000)
             </script>
         </div>
     </div>
