--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@deleteagency/live-highlight@0.0.1/build/live-highlight.min.js"></script>
 
     <script src="build/device-observer.min.js"></script>
+    <link rel="stylesheet" href="./examples/test.css" media="print" onload="this.onload = null; this.media = 'all';">
 </head>
 
 <script>
