--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.17.1/plugins/autoloader/prism-autoloader.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@deleteagency/live-highlight@0.0.1/build/live-highlight.min.js"></script>
 
-    <script src="build/device-observer.min.js"></script>
+    <script src="demo/dist/device-observer.min.js"></script>
 </head>
 
 <script>
@@ -42,7 +42,7 @@
             <h2>Simple example</h2>
             <p>
                 To get some understanding about why it's not robust to rely on window.innerWidth property, take a look at
-                <a href="./examples/window-width-test.html">this</a> page
+                <a href="./demo/window-width-test.html">this</a> page
             </p>
             <p>
                 Lets configure deviceObserver with a few devices and its width and start observing when it is changed.
