fixes after review

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <textarea style="width: 100%" id="logs" rows="5"></textarea>
 
-            <script data-live-highlight="simple" defer>
+            <script data-live-highlight="simple">
                 const logs = document.getElementById('logs');
 
                 const mobileFirst = JSON.parse(!sessionStorage.getItem('isDesktop'));
